docs/0.0.0.0/_sources/gallery/geometry/plot_single.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/geometry/plot_single.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_geometry_plot_single.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_geometry_plot_single.py:


1x1 Geometry Visualization
==========================
This script demonstrates how to create and visualize a 1x1 geometry using the FiberFusing library.

.. GENERATED FROM PYTHON SOURCE LINES 6-46



.. image-sg:: /gallery/geometry/images/sphx_glr_plot_single_001.png
   :alt: Fiber structure, Fiber structure
   :srcset: /gallery/geometry/images/sphx_glr_plot_single_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 1000x500 with 3 Axes>





|

.. code-block:: Python


    from FiberFusing import Geometry, DomainAlignment, BackGround
    from FiberFusing.fiber import FiberLoader
    from FiberFusing.profile import Profile


    # Set up the background medium (air)
    air_background = BackGround(refractive_index=1.0)

    # Create the profile structure based on the fused fiber profile
    profile = Profile()

    profile.add_center_fiber(
        fiber_radius=62.5e-6
    )

    profile.refractive_index = 1.4444  # Refractive index of silica at the specified wavelength


    # Load the fiber (e.g., SMF-28) positioned at the core of the profile structure
    fiber_loader = FiberLoader()
    fibers = [
        fiber_loader.load_fiber('SMF28', clad_refractive_index=profile.refractive_index, position=core_position)
        for core_position in profile.cores
    ]

    # Set up the geometry with the defined background, profile structure, and resolution
    geometry = Geometry(
        x_bounds=DomainAlignment.CENTERING,
        y_bounds=DomainAlignment.CENTERING,
        resolution=250
    )

    # Add the fiber to the geometry
    geometry.add_structure(air_background, profile, *fibers)

    geometry.initialize()

    # Plot the resulting geometry
    geometry.plot()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.790 seconds)


.. _sphx_glr_download_gallery_geometry_plot_single.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_single.ipynb <plot_single.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_single.py <plot_single.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_single.zip <plot_single.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
